Specials Details alignment fix

--- a/_sass/_room-details.scss
+++ b/_sass/_room-details.scss
@@ -154,13 +154,13 @@
 			}
 		.details-intro{ 
 				&.style2{
-					text-align:center; padding:30px 0 60px; position:relative;
+					text-align:center; padding:30px 13% 60px; position:relative;
 					.holds{max-width:80%; margin:0 auto;
 						@media (max-width: 767px){
 							 max-width:90%;
 						}
 						.badger{ position:absolute; bottom:-20px; right:-10px;}
-						h2{ text-align:right; padding-top:36px; padding-right:20px;
+						h2{ text-align:center; padding-top:36px; padding-right:20px;
 							@media (max-width: 992px){
 							 padding-top:50px;
 							}
